--- a/src/css/index.css
+++ b/src/css/index.css
@@ -124,13 +124,9 @@ body {
 
 .table-column-content {
   text-align: left;
-  display: block;
-  position: absolute;
-  width: 300;
-  top: 3em;
-  z-index: 3;
-  border: 1px solid white;
-  background-color: white;
+  border: 1px solid black;
+  background-color: yellow;
+  margin-top: 10px;
 }
 
 
