--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2307,16 +2307,23 @@
   /* border:1px solid blue; */
 }
 
-.taskWork-list-01 .taskWorkSub,
-.taskWork-list-05 .taskWorkSub {
+.taskWork-list-01 .useText{
+  margin-left: 5px;
+}
+
+.taskWork-list-01 .taskWorkSub{
   width: 90px;
   font-size: 16px;
-  display: inline-block;
+  /* display: inline-block; */
+  float: left;
   /* border:1px solid blue; */
 }
 
-.taskWork-list-05 .taskWorkSub1 {
-  width: 60px;
+
+
+.taskWork-list-05 .useBtn{
+  margin-left: 10px;
+  margin-right: 15px;
 }
 
 .taskWork-list .taskWork-place1 {
@@ -2324,7 +2331,7 @@
 }
 
 .taskWork-list .twl {
-  width: 670px;
+  width: 100%;
   display: inline-block;
   height: 60px;
   line-height: 60px;
@@ -2354,10 +2361,6 @@
   padding: 0px !important;
 }
 
-.taskWork-list-05 .taskWork-datepicker {
-  margin-left: 10px;
-}
-
 .taskWork-list-06
   .ant-select:not(.ant-select-customize-input)
   .ant-select-selector {
@@ -2367,8 +2370,8 @@
   color: #222 !important;
 }
 .taskWork-list .inputBox-taskWork.sub .ant-input {
-  margin-left: -20px;
-  width: 180px;
+  margin-left: -10px;
+  width: 186.82px;
 }
 
 /*기사 그룹관리*/
