--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -371,6 +371,18 @@
   position: absolute;
   z-index: 100;
   right: 10px;
+  top: 320px;
+  background-color: #000;
+  padding: 5px 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.order-list-show-btn {
+  float: right;
+  position: absolute;
+  z-index: 100;
+  left: 0px;
   top: 300px;
   background-color: #000;
   padding: 5px 20px;
@@ -1585,7 +1597,7 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
-.updatePassword-inner .twl .coinRider-list{
+.updatePassword-inner .twl .coinRider-list {
   margin-left: 0 !important;
 }
 
