--- a/src/css/franchise.css
+++ b/src/css/franchise.css
@@ -21,6 +21,12 @@
   margin-left: 15px;
 }
 
+.searchRiderInput {
+  width: 200px !important;
+  margin-left: 15px;
+}
+
+
 .exel img {
   width: 20px;
   margin-right: 5px;
