--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2336,7 +2336,6 @@
   padding: 20px;
   text-align: left;
   margin-top: 5px;
-  height: 340px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -2380,8 +2379,8 @@
 .taskWork-list .twl {
   width: 100%;
   display: inline-block;
-  height: 60px;
-  line-height: 60px;
+  height: 50px;
+  line-height: 50px;
   /* border:1px solid red */
 }
 
@@ -2389,6 +2388,14 @@
   margin-top: -10px;
 }
 
+/* .taskWork-list-03>td {
+ width: 105px !important;
+} */
+
+.taskWork-place1 .searchRiderInput{
+  width: 185px !important;
+  margin-left:0px!important;
+}
 .taskWork-btn-01 {
   margin-top: 20px;
   text-align: center;
