--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2765,10 +2765,10 @@
   width: 400px;
 }
 
-.registRider-Dialog .ant-btn {
-  width: 130px;
+.registRider-Dialog .submitBlock .ant-btn {
+  width: 125px;
   height: 40px;
-  font-size: 18px !important;
+  font-size: 16px !important;
 }
 
 .giveBox {
@@ -2782,7 +2782,7 @@
 
 .registRiderWrapper.sub .submitBlock {
   width: 390px;
-  margin-top: 40px;
+  margin-top: 55px;
 }
 
 /* 하단 */
@@ -2815,11 +2815,13 @@
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
+  margin-bottom: 0 !important;
 }
 .bike-type-box ul li .selectItem {
   display: inline-block;
-  width: 200px;
-  margin-left: 15px;
+  width: 165px;
+  margin: 0 0 0 15px;
+
   vertical-align: 0px;
 }
 /*직원 등록*/
