--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -29,7 +29,7 @@
   transform: translate(-50%, -50%);
   width: 800px;
   border-radius: 30px;
-  z-index: 2;
+  z-index: 30;
 }
 
 .searchFranchise-Dialog .layout::-webkit-scrollbar {
@@ -3459,12 +3459,13 @@
 }
 
 .chat-message-container {
-  float: right;
+  /* float: right; */
   padding: 0px;
   width: 440px;
   height: 700px;
   border-radius: 10px;
   background-color: #ededed;
+  margin-left: 30px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
 .chat-input {
@@ -4208,7 +4209,30 @@
   transform: translate(-50%, -50%);
   border-radius: 10px;
   height: 700px;
+  display: flex;
 }
+
+.Modal-chat .search-wrapper {
+  display: flex;
+  flex-direction: center;
+  /* margin-top: 20px; */
+}
+
+.Modal-chat .search-wrapper .search-btn {
+  width: 50%;
+  height: 50px;
+  font-size: large;
+  background-color: black;
+  color: #fddc00;
+}
+
+.Modal-chat .search-wrapper .ant-btn:hover,
+.ant-btn:focus {
+  color: #fddc00;
+  background: black;
+  border-color: none;
+}
+
 .error-message {
   color: red;
 }
