--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3399,19 +3399,27 @@
   color: #777;
 }
 .chat-container {
-  padding: 0px;
-  width: 440px;
-  height: 700px;
+  /* width: 440px; */
+  /* height: 700px; */
+  height:100%;
   border-radius: 10px;
   background-color: white;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
+.chat-page{
+  padding:10px 0px;
+ 
+}
+/* .chat-list-container{
+  height:650px;
+  border:1px solid red;
+} */
 .chat-title {
   width: 100%;
   background-color: #fddc00;
-  padding: 20px;
+  padding:20px;
   text-align: center;
-  font-size: 24px;
+  font-size: 22px;
   letter-spacing: -1px;
   font-family: NotoSansMedium;
   border-top-left-radius: 10px;
@@ -3419,7 +3427,7 @@
 }
 
 .chat-item-container {
-  padding: 20px;
+  padding: 10px 20px;
   cursor: pointer;
 }
 .chat-item-image {
@@ -3438,7 +3446,7 @@
   width: 100%;
 }
 .chat-item-top-title {
-  font-size: 24px;
+  font-size: 22px;
   letter-spacing: -1px;
   font-family: NotoSansBold;
 }
@@ -3464,11 +3472,12 @@
   /* float: right; */
   padding: 0px;
   width: 440px;
-  height: 700px;
+  height:100%;
   border-radius: 10px;
   background-color: #ededed;
   margin-left: 30px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+ 
 }
 .chat-input {
   border-radius: 12px;
@@ -3477,6 +3486,8 @@
   height: 55px;
   background-color: #fff;
 }
+
+
 .chat-send-input {
   width: 330px;
   font-size: 18px;
@@ -3524,7 +3535,7 @@
 }
 
 .chat-message {
-  height: 540px;
+  height: 500px;
   padding: 20px;
   overflow-y: scroll;
   display: flex;
@@ -4210,7 +4221,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
-  height: 700px;
+  /* height: 700px; */
   display: flex;
 }
 
